# libresample

./: CMakeLists.txt  libresample.pc.in
debian/: changelog  control  control.in  copyright_hints  rules  watch
debian/patches/: 1001_shlib-cmake.patch  series
src/: configtemplate.h  resample_defs.h
tests/: .CMakeLists.txt.swp  .resampler.cc.swp  .testresample.c.swp  CMakeLists.txt  resampler.cc  testresample.c
